[gd_scene load_steps=17 format=4 uid="uid://dkshkpey48ghe"]

[ext_resource type="Script" path="res://World/Levels/scripts/room_9.gd" id="1_1aema"]
[ext_resource type="PackedScene" uid="uid://baprq14svtfj4" path="res://Entities/Player/player.tscn" id="1_1svbw"]
[ext_resource type="PackedScene" uid="uid://p42jlgkmsutn" path="res://Entities/Shooter/shooter.tscn" id="3_m3iq4"]
[ext_resource type="PackedScene" uid="uid://dbkt5rnxap3mf" path="res://Entities/Wanderer/wanderer.tscn" id="4_wohpk"]
[ext_resource type="PackedScene" uid="uid://mrpjua8vrjbm" path="res://Entities/Walker/walker.tscn" id="5_mnowe"]
[ext_resource type="PackedScene" uid="uid://dclhv2i7n5pcd" path="res://Entities/CoinNode/coin_node.tscn" id="6_bh6tv"]
[ext_resource type="PackedScene" uid="uid://casvhqr7evvje" path="res://Entities/Spike/spike.tscn" id="6_uyx12"]
[ext_resource type="PackedScene" uid="uid://dg6xeoeca1w6y" path="res://World/LevelTransition/level_transition.tscn" id="7_vlyg5"]
[ext_resource type="PackedScene" uid="uid://btm8i7kyj8h2" path="res://World/TileMaps/tile_map.tscn" id="9_k4tcy"]
[ext_resource type="PackedScene" uid="uid://bh2ug7a8cgm22" path="res://World/TileMaps/grass_map.tscn" id="10_t4idi"]
[ext_resource type="PackedScene" uid="uid://bbpfliouyy706" path="res://Entities/spawn_setter/spawn_setter.tscn" id="11_sn7rp"]
[ext_resource type="PackedScene" uid="uid://d0nnon5umbpvw" path="res://Entities/spawn_setter/spike_spawn_setter.tscn" id="12_qeahx"]
[ext_resource type="PackedScene" uid="uid://ofnr1eidsgif" path="res://Global/campire.tscn" id="13_ebltx"]
[ext_resource type="Texture2D" uid="uid://d3x8spke8q13i" path="res://Assets/jump_boots.png" id="14_eqd6e"]
[ext_resource type="FontFile" uid="uid://d2xk6epfeb0ag" path="res://Global/m3x6.ttf" id="15_3sa33"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yietf"]
size = Vector2(6.25, 4)

[node name="room_9" type="Node2D"]
script = ExtResource("1_1aema")

[node name="player" parent="." instance=ExtResource("1_1svbw")]
position = Vector2(-475, 89)

[node name="player_camera" type="Camera2D" parent="player"]
position = Vector2(-6.06219, 9.81979)
process_callback = 0
limit_left = -584
limit_top = -48
limit_right = 8
limit_bottom = 136
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_vertical_enabled = true

[node name="enemies" type="Node" parent="."]

[node name="Shooter" parent="enemies" instance=ExtResource("3_m3iq4")]
position = Vector2(-75, 60)

[node name="Wanderer" parent="enemies" instance=ExtResource("4_wohpk")]
position = Vector2(-127.676, 22.1264)

[node name="Walker" parent="enemies" instance=ExtResource("5_mnowe")]
position = Vector2(-250, 32)

[node name="Wanderer2" parent="enemies" instance=ExtResource("4_wohpk")]
position = Vector2(-318, 13)

[node name="Shooter2" parent="enemies" instance=ExtResource("3_m3iq4")]
position = Vector2(-219, 76)

[node name="Wanderer3" parent="enemies" instance=ExtResource("4_wohpk")]
position = Vector2(-81.6604, 21.1455)

[node name="coin_nodes" type="Node" parent="."]

[node name="CoinNode" parent="coin_nodes" instance=ExtResource("6_bh6tv")]
position = Vector2(-336, -16)
health = 3

[node name="CoinNode2" parent="coin_nodes" instance=ExtResource("6_bh6tv")]
position = Vector2(-176, 56)
health = 3

[node name="doors" type="Node" parent="."]

[node name="LevelTransition" parent="doors" instance=ExtResource("7_vlyg5")]
position = Vector2(7.78511, 12.3798)
next_level = "res://World/Levels/room_7.tscn"
spawn_pos = Vector2(-171, 251)

[node name="LevelTransition2" parent="doors" instance=ExtResource("7_vlyg5")]
position = Vector2(-568, 136)
next_level = "res://World/Levels/room_1.tscn"
spawn_pos = Vector2(632, 28)
flattened = true

[node name="spikes" type="Node" parent="."]

[node name="Spike2" parent="spikes" instance=ExtResource("6_uyx12")]
position = Vector2(-296, 40)

[node name="tile_map" parent="." instance=ExtResource("9_k4tcy")]
tile_map_data = PackedByteArray("AAC9/wsAAAABAAIAAAC7/woAAAABAAIAAAC7/wsAAAACAAIAAAC7/wwAAAAAAAMAAAC7/w0AAAABAAIAAAC7/w4AAAACAAIAAAC7/w8AAAAAAAEAAAC7/xAAAAABAAIAAAC8/woAAAAAAAMAAAC8/wsAAAACAAIAAAC8/wwAAAAAAAMAAAC8/w0AAAABAAIAAAC8/w4AAAABAAIAAAC8/w8AAAABAAIAAAC8/xAAAAACAAIAAAC9/woAAAAAAAEAAAC9/wwAAAABAAIAAAC9/w0AAAACAAIAAAC9/w4AAAABAAIAAAC9/w8AAAAAAAEAAAC9/xAAAAACAAIAAAC+/woAAAABAAIAAAC+/wsAAAABAAIAAAC+/wwAAAACAAIAAAC+/w0AAAABAAIAAAC+/w4AAAABAAIAAAC+/w8AAAACAAIAAAC+/xAAAAABAAIAAAC//woAAAACAAIAAAC//wsAAAACAAIAAAC//wwAAAACAAIAAAC//w0AAAABAAIAAAC//w4AAAACAAIAAAC//w8AAAABAAIAAAC//xAAAAABAAIAAADA/woAAAABAAIAAADA/wsAAAABAAIAAADA/wwAAAACAAIAAADA/w0AAAACAAIAAADA/w4AAAACAAIAAADA/w8AAAACAAIAAADA/xAAAAABAAIAAADB/woAAAACAAIAAADB/wsAAAACAAIAAADB/wwAAAACAAIAAADB/w0AAAACAAIAAADB/w4AAAACAAIAAADB/w8AAAABAAIAAADB/xAAAAACAAIAAAC6/wgAAAABAAIAAAC6/wkAAAABAAIAAAC6/woAAAACAAIAAAC6/wsAAAABAAIAAAC6/wwAAAACAAIAAAC6/w0AAAACAAIAAAC6/w4AAAACAAIAAAC6/w8AAAAAAAMAAAC6/xAAAAABAAIAAAC7/wgAAAABAAIAAAC7/wkAAAACAAIAAAC8/wgAAAACAAIAAAC8/wkAAAABAAIAAAC9/wgAAAACAAIAAAC9/wkAAAACAAIAAAC+/wgAAAACAAIAAAC+/wkAAAAAAAEAAAC//wgAAAACAAIAAAC//wkAAAAAAAMAAADA/wgAAAAAAAEAAADA/wkAAAACAAIAAADB/wgAAAACAAIAAADB/wkAAAACAAIAAADC/wgAAAABAAIAAADC/wkAAAAAAAMAAADC/woAAAACAAIAAADC/wsAAAAAAAEAAADC/wwAAAABAAIAAADC/w0AAAABAAIAAADC/w4AAAACAAIAAADC/w8AAAABAAIAAADC/xAAAAACAAIAAADD/w0AAAACAAIAAADD/w4AAAAAAAEAAADD/w8AAAACAAIAAADD/xAAAAABAAIAAADE/w0AAAABAAIAAADE/w4AAAABAAIAAADE/w8AAAABAAIAAADE/xAAAAACAAIAAADF/w0AAAABAAIAAADF/w4AAAABAAIAAADF/w8AAAACAAIAAADF/xAAAAABAAIAAADG/w0AAAABAAIAAADG/w4AAAABAAIAAADG/w8AAAABAAIAAADG/xAAAAACAAIAAADH/w0AAAABAAIAAADH/w4AAAABAAIAAADH/w8AAAABAAIAAADH/xAAAAACAAIAAADI/w0AAAABAAIAAADI/w4AAAAAAAEAAADI/w8AAAACAAIAAADI/xAAAAACAAIAAADJ/w0AAAACAAIAAADJ/w4AAAAAAAEAAADJ/w8AAAABAAIAAADJ/xAAAAAAAAEAAADK/w0AAAACAAIAAADK/w4AAAACAAIAAADK/w8AAAACAAIAAADK/xAAAAABAAIAAADL/w0AAAABAAIAAADL/w4AAAACAAIAAADL/w8AAAAAAAMAAADL/xAAAAACAAIAAADM/w0AAAACAAIAAADM/w4AAAAAAAMAAADM/w8AAAAAAAEAAADM/xAAAAABAAIAAADN/w0AAAACAAIAAADN/w4AAAACAAIAAADN/w8AAAACAAIAAADN/xAAAAABAAIAAADO/w0AAAACAAIAAADO/w4AAAABAAIAAADO/w8AAAABAAIAAADO/xAAAAABAAIAAADP/w0AAAABAAIAAADP/w4AAAACAAIAAADP/w8AAAACAAIAAADP/xAAAAACAAIAAADQ/w0AAAABAAIAAADQ/w4AAAACAAIAAADQ/w8AAAACAAIAAADQ/xAAAAACAAIAAADR/w0AAAACAAIAAADR/w4AAAACAAIAAADR/w8AAAACAAIAAADR/xAAAAACAAIAAADS/w0AAAAAAAMAAADS/w4AAAACAAIAAADS/w8AAAAAAAEAAADS/xAAAAACAAIAAADT/w0AAAAAAAEAAADT/w4AAAAAAAEAAADT/w8AAAACAAIAAADT/xAAAAABAAIAAADU/w0AAAABAAIAAADU/w4AAAACAAIAAADU/w8AAAAAAAEAAADU/xAAAAACAAIAAADV/w0AAAACAAIAAADV/w4AAAABAAIAAADV/w8AAAACAAIAAADV/xAAAAABAAIAAAC3/wMAAAABAAIAAAC3/wQAAAACAAIAAAC3/wUAAAABAAIAAAC3/wYAAAAAAAEAAAC3/wcAAAACAAIAAAC3/wgAAAAAAAEAAAC3/wkAAAABAAIAAAC3/woAAAACAAIAAAC3/wsAAAAAAAMAAAC3/wwAAAABAAIAAAC3/w0AAAABAAIAAAC3/w4AAAAAAAMAAAC3/w8AAAACAAIAAAC3/xAAAAACAAIAAAC3//3/AAABAAIAAAC3//7/AAABAAIAAAC3////AAACAAIAAAC3/wAAAAABAAIAAAC3/wEAAAACAAIAAAC3/wIAAAACAAIAAAC4//3/AAACAAIAAAC4//7/AAACAAIAAAC4////AAACAAIAAAC4/wAAAAACAAIAAAC4/wEAAAABAAIAAAC4/wIAAAABAAIAAAC4/wMAAAAAAAMAAAC4/wQAAAABAAIAAAC5//3/AAABAAIAAAC5//7/AAABAAIAAAC5////AAABAAIAAAC5/wAAAAACAAIAAAC5/wEAAAABAAIAAAC5/wIAAAACAAIAAAC5/wMAAAAAAAEAAAC5/wQAAAABAAIAAAC6//3/AAABAAIAAAC6//7/AAACAAIAAAC6////AAABAAIAAAC6/wAAAAACAAIAAAC6/wEAAAABAAIAAAC6/wIAAAABAAIAAAC6/wMAAAAAAAEAAAC6/wQAAAACAAIAAAC7//3/AAABAAIAAAC7//7/AAACAAIAAAC7////AAACAAIAAAC7/wAAAAABAAIAAAC7/wEAAAABAAIAAAC7/wIAAAABAAIAAAC7/wMAAAAAAAMAAAC7/wQAAAACAAIAAAC8//3/AAACAAIAAAC8//7/AAABAAIAAAC8////AAACAAIAAAC8/wAAAAACAAIAAAC8/wEAAAACAAIAAAC8/wIAAAACAAIAAAC8/wMAAAAAAAEAAAC8/wQAAAACAAIAAAC9//3/AAACAAIAAAC9//7/AAACAAIAAAC9////AAACAAIAAAC9/wAAAAABAAIAAAC9/wEAAAACAAIAAAC9/wIAAAABAAIAAAC9/wMAAAAAAAMAAAC9/wQAAAACAAIAAAC+//3/AAACAAIAAAC+//7/AAABAAIAAAC+////AAABAAIAAAC+/wAAAAACAAIAAAC+/wEAAAABAAIAAAC+/wIAAAACAAIAAAC+/wMAAAAAAAEAAAC+/wQAAAAAAAMAAAC///3/AAACAAIAAAC///7/AAABAAIAAAC/////AAACAAIAAAC//wAAAAACAAIAAAC//wEAAAABAAIAAAC//wIAAAAAAAEAAAC//wMAAAAAAAEAAAC//wQAAAACAAIAAADA//3/AAABAAIAAADA//7/AAABAAIAAADA////AAABAAIAAADA/wAAAAACAAIAAADA/wEAAAABAAIAAADA/wIAAAABAAIAAADA/wMAAAAAAAMAAADA/wQAAAABAAIAAADB//3/AAACAAIAAADB//7/AAABAAIAAADB////AAACAAIAAADB/wAAAAACAAIAAADB/wEAAAACAAIAAADB/wIAAAACAAIAAADB/wMAAAACAAIAAADB/wQAAAABAAIAAADC//3/AAABAAIAAADC//7/AAABAAIAAADC////AAACAAIAAADC/wAAAAACAAIAAADC/wEAAAABAAIAAADC/wIAAAACAAIAAADC/wMAAAAAAAMAAADC/wQAAAACAAIAAADD//3/AAABAAIAAADD//7/AAACAAIAAADD////AAACAAIAAADD/wAAAAABAAIAAADD/wEAAAACAAIAAADD/wIAAAACAAIAAADD/wMAAAACAAIAAADD/wQAAAACAAIAAADE//3/AAACAAIAAADE//7/AAABAAIAAADE////AAABAAIAAADE/wAAAAACAAIAAADE/wEAAAAAAAEAAADE/wIAAAABAAIAAADE/wMAAAABAAIAAADE/wQAAAACAAIAAADF//3/AAACAAIAAADF//7/AAACAAIAAADF////AAACAAIAAADF/wAAAAACAAIAAADF/wEAAAABAAIAAADF/wIAAAABAAIAAADF/wMAAAACAAIAAADF/wQAAAACAAIAAADG//3/AAABAAIAAADG//7/AAACAAIAAADG////AAABAAIAAADG/wAAAAACAAIAAADG/wEAAAACAAIAAADG/wIAAAACAAIAAADG/wMAAAACAAIAAADG/wQAAAACAAIAAADH//3/AAABAAIAAADH//7/AAACAAIAAADH////AAACAAIAAADH/wAAAAACAAIAAADH/wEAAAABAAIAAADH/wIAAAAAAAEAAADH/wMAAAABAAIAAADH/wQAAAACAAIAAADI//3/AAACAAIAAADI//7/AAABAAIAAADI////AAACAAIAAADI/wAAAAABAAIAAADI/wEAAAABAAIAAADI/wIAAAACAAIAAADI/wMAAAAAAAEAAADI/wQAAAABAAIAAADJ//3/AAACAAIAAADJ//7/AAACAAIAAADJ////AAABAAIAAADJ/wAAAAABAAIAAADJ/wEAAAABAAIAAADJ/wIAAAABAAIAAADJ/wMAAAACAAIAAADJ/wQAAAACAAIAAADK//3/AAABAAIAAADK//7/AAACAAIAAADK////AAACAAIAAADK/wAAAAABAAIAAADK/wEAAAABAAIAAADK/wIAAAACAAIAAADK/wMAAAACAAIAAADK/wQAAAABAAIAAADL//3/AAACAAIAAADL//7/AAACAAIAAADL////AAACAAIAAADL/wAAAAACAAIAAADL/wEAAAACAAIAAADL/wIAAAABAAIAAADL/wMAAAABAAIAAADL/wQAAAACAAIAAADI/wUAAAABAAIAAADI/wYAAAACAAIAAADI/wcAAAABAAIAAADI/wgAAAACAAIAAADI/wkAAAACAAIAAADI/woAAAABAAIAAADJ/wUAAAABAAIAAADJ/wYAAAACAAIAAADJ/wcAAAACAAIAAADJ/wgAAAACAAIAAADJ/wkAAAABAAIAAADJ/woAAAAAAAMAAADJ/wsAAAACAAIAAADK/wUAAAABAAIAAADK/wYAAAACAAIAAADK/wcAAAACAAIAAADK/wgAAAAAAAEAAADK/wkAAAABAAIAAADK/woAAAAAAAEAAADK/wsAAAACAAIAAADL/wUAAAABAAIAAADL/wYAAAACAAIAAADL/wcAAAACAAIAAADL/wgAAAACAAIAAADL/wkAAAABAAIAAADL/woAAAAAAAEAAADL/wsAAAABAAIAAADM/wcAAAABAAIAAADM/wgAAAACAAIAAADM/wkAAAABAAIAAADM/woAAAAAAAEAAADM/wsAAAABAAIAAADN/wcAAAABAAIAAADN/wgAAAACAAIAAADN/wkAAAAAAAEAAADN/woAAAABAAIAAADN/wsAAAABAAIAAADO/wcAAAACAAIAAADO/wgAAAAAAAEAAADO/wkAAAAAAAEAAADO/woAAAAAAAEAAADO/wsAAAABAAIAAADP/wcAAAABAAIAAADP/wgAAAAAAAMAAADP/wkAAAABAAIAAADP/woAAAACAAIAAADP/wsAAAABAAIAAADR/wgAAAABAAIAAADR/wkAAAABAAIAAADR/woAAAAAAAMAAADR/wsAAAACAAIAAADS/wgAAAACAAIAAADS/wkAAAACAAIAAADS/woAAAABAAIAAADS/wsAAAACAAIAAADT/wgAAAABAAIAAADT/wkAAAABAAIAAADT/woAAAACAAIAAADT/wsAAAABAAIAAADU/wgAAAABAAIAAADU/wkAAAACAAIAAADU/woAAAABAAIAAADU/wsAAAACAAIAAADV/wgAAAACAAIAAADV/wkAAAAAAAMAAADV/woAAAACAAIAAADV/wsAAAAAAAEAAADW/wgAAAACAAIAAADW/wkAAAACAAIAAADW/woAAAABAAIAAADW/wsAAAABAAIAAADX/wgAAAABAAIAAADX/wkAAAACAAIAAADX/woAAAABAAIAAADX/wsAAAABAAIAAADY/wgAAAABAAIAAADY/wkAAAAAAAEAAADY/woAAAABAAIAAADY/wsAAAAAAAEAAADZ/wgAAAABAAIAAADZ/wkAAAABAAIAAADZ/woAAAACAAIAAADZ/wsAAAABAAIAAADR/wYAAAABAAIAAADR/wcAAAABAAIAAADS/wYAAAACAAIAAADS/wcAAAABAAIAAADT/wYAAAABAAIAAADT/wcAAAABAAIAAADU/wYAAAABAAIAAADU/wcAAAAAAAEAAADV/wYAAAACAAIAAADV/wcAAAAAAAMAAADW/wYAAAACAAIAAADW/wcAAAACAAIAAADX/wYAAAACAAIAAADX/wcAAAACAAIAAADN/wMAAAABAAIAAADN/wQAAAACAAIAAADN/wUAAAABAAIAAADO/wMAAAABAAIAAADO/wQAAAACAAIAAADO/wUAAAACAAIAAADP/wMAAAABAAIAAADP/wQAAAACAAIAAADP/wUAAAABAAIAAADQ/wMAAAACAAIAAADQ/wQAAAAAAAMAAADQ/wUAAAACAAIAAADR/wMAAAACAAIAAADR/wQAAAABAAIAAADR/wUAAAABAAIAAADS/wMAAAACAAIAAADS/wQAAAACAAIAAADS/wUAAAABAAIAAADT/wMAAAACAAIAAADT/wQAAAABAAIAAADT/wUAAAABAAIAAADb/wYAAAABAAIAAADb/wcAAAABAAIAAADb/wgAAAAAAAMAAADc/wgAAAACAAIAAADY/wcAAAACAAIAAADZ/wcAAAACAAIAAADU/wUAAAACAAIAAADV/wUAAAACAAIAAADW/wUAAAACAAIAAADX/wUAAAACAAIAAADN//7/AAABAAIAAADN////AAACAAIAAADN/wAAAAACAAIAAADN/wEAAAACAAIAAADN/wIAAAABAAIAAADO//7/AAABAAIAAADO////AAABAAIAAADO/wAAAAAAAAEAAADO/wEAAAABAAIAAADO/wIAAAAAAAEAAADP//7/AAACAAIAAADP////AAACAAIAAADP/wAAAAAAAAEAAADP/wEAAAABAAIAAADP/wIAAAACAAIAAADQ//7/AAABAAIAAADQ////AAACAAIAAADQ/wAAAAACAAIAAADQ/wEAAAACAAIAAADQ/wIAAAABAAIAAADR////AAABAAIAAADR/wAAAAABAAIAAADR/wEAAAACAAIAAADR/wIAAAACAAIAAADS////AAABAAIAAADS/wAAAAACAAIAAADS/wEAAAABAAIAAADS/wIAAAACAAIAAADW/w0AAAACAAIAAADW/w4AAAACAAIAAADW/w8AAAACAAIAAADW/xAAAAACAAIAAADX/w0AAAABAAIAAADX/w4AAAABAAIAAADX/w8AAAAAAAEAAADX/xAAAAABAAIAAADY/w0AAAACAAIAAADY/w4AAAAAAAMAAADY/w8AAAAAAAEAAADY/xAAAAABAAIAAADZ/w0AAAABAAIAAADZ/w4AAAABAAIAAADZ/w8AAAAAAAEAAADZ/xAAAAACAAIAAADa/w0AAAACAAIAAADa/w4AAAAAAAMAAADa/w8AAAACAAIAAADa/xAAAAACAAIAAADb/w0AAAABAAIAAADb/w4AAAAAAAMAAADb/w8AAAABAAIAAADb/xAAAAABAAIAAADc/w0AAAABAAIAAADc/w4AAAACAAIAAADc/w8AAAABAAIAAADc/xAAAAACAAIAAADd/w0AAAABAAIAAADd/w4AAAAAAAEAAADd/w8AAAACAAIAAADd/xAAAAACAAIAAADe/w0AAAAAAAEAAADe/w4AAAABAAIAAADe/w8AAAABAAIAAADe/xAAAAABAAIAAADb/woAAAABAAIAAADb/wsAAAACAAIAAADb/wwAAAABAAIAAADc/woAAAABAAIAAADc/wsAAAACAAIAAADc/wwAAAABAAIAAADd/woAAAABAAIAAADd/wsAAAABAAIAAADd/wwAAAACAAIAAADe/woAAAABAAIAAADe/wsAAAABAAIAAADe/wwAAAAAAAMAAADf/woAAAACAAIAAADf/wsAAAACAAIAAADf/wwAAAAAAAMAAADg/woAAAACAAIAAADg/wsAAAABAAIAAADg/wwAAAABAAIAAADf/w0AAAACAAIAAADf/w4AAAABAAIAAADg/w0AAAAAAAEAAADg/w4AAAACAAIAAADh/wwAAAACAAIAAADh/w0AAAAAAAEAAADh/w4AAAABAAIAAAC4/wgAAAAAAAQAAAC5/wgAAAAAAAQAAADI/wsAAAACAAQAAAD//wMAAAAAAAEAAAD//wQAAAAAAAEAAAD//wUAAAAAAAEAAAD//wYAAAAAAAEAAAD//wcAAAAAAAEAAAD//wgAAAACAAEAAAD//wkAAAACAAEAAAD//woAAAAAAAEAAAD//wsAAAAAAAEAAAD//wwAAAAAAAEAAAD//w0AAAAAAAEAAAD//w4AAAAAAAEAAAAAAAMAAAACAAEAAAAAAAQAAAACAAEAAAAAAAUAAAACAAEAAAAAAAYAAAAAAAEAAAAAAAcAAAACAAEAAAAAAAgAAAACAAEAAAAAAAkAAAACAAEAAAAAAAoAAAACAAEAAAAAAAsAAAAAAAEAAAAAAAwAAAAAAAEAAAAAAA0AAAACAAEAAAAAAA4AAAACAAEAAAD7/wQAAAACAAEAAAD7/wUAAAACAAEAAAD7/wYAAAACAAEAAAD7/wcAAAACAAEAAAD7/wgAAAAAAAEAAAD7/wkAAAAAAAEAAAD7/woAAAACAAEAAAD7/wsAAAAAAAEAAAD7/wwAAAAAAAEAAAD7/w0AAAACAAEAAAD7/w4AAAACAAEAAAD8/wQAAAACAAEAAAD8/wUAAAAAAAEAAAD8/wYAAAAAAAEAAAD8/wcAAAAAAAEAAAD8/wgAAAAAAAEAAAD8/wkAAAACAAEAAAD8/woAAAACAAEAAAD8/wsAAAAAAAEAAAD8/wwAAAACAAEAAAD8/w0AAAACAAEAAAD8/w4AAAACAAEAAAD9/wQAAAACAAEAAAD9/wUAAAAAAAEAAAD9/wYAAAACAAEAAAD9/wcAAAACAAEAAAD9/wgAAAACAAEAAAD9/wkAAAAAAAEAAAD9/woAAAAAAAEAAAD9/wsAAAACAAEAAAD9/wwAAAACAAEAAAD9/w0AAAACAAEAAAD9/w4AAAAAAAEAAAD+/wQAAAAAAAEAAAD+/wUAAAACAAEAAAD+/wYAAAAAAAEAAAD+/wcAAAAAAAEAAAD+/wgAAAACAAEAAAD+/wkAAAACAAEAAAD+/woAAAAAAAEAAAD+/wsAAAACAAEAAAD+/wwAAAAAAAEAAAD+/w0AAAAAAAEAAAD+/w4AAAACAAEAAAD3/wUAAAABAAEAAAD3/wYAAAACAAEAAAD3/wcAAAACAAEAAAD3/wgAAAACAAEAAAD3/wkAAAACAAEAAAD3/woAAAAAAAEAAAD3/wsAAAACAAEAAAD3/wwAAAACAAEAAAD3/w0AAAACAAEAAAD3/w4AAAAAAAEAAAD4/wUAAAAAAAEAAAD4/wYAAAAAAAEAAAD4/wcAAAACAAEAAAD4/wgAAAACAAEAAAD4/wkAAAACAAEAAAD4/woAAAACAAEAAAD4/wsAAAAAAAEAAAD4/wwAAAAAAAEAAAD4/w0AAAAAAAEAAAD4/w4AAAAAAAEAAAD5/wUAAAACAAEAAAD5/wYAAAACAAEAAAD5/wcAAAAAAAEAAAD5/wgAAAAAAAEAAAD5/wkAAAACAAEAAAD5/woAAAAAAAEAAAD5/wsAAAACAAEAAAD5/wwAAAAAAAEAAAD5/w0AAAAAAAEAAAD5/w4AAAAAAAEAAAD6/wUAAAACAAEAAAD6/wYAAAACAAEAAAD6/wcAAAACAAEAAAD6/wgAAAAAAAEAAAD6/wkAAAACAAEAAAD6/woAAAACAAEAAAD6/wsAAAACAAEAAAD6/wwAAAACAAEAAAD6/w0AAAACAAEAAAD6/w4AAAAAAAEAAAD2/wYAAAACAAEAAAD1/wYAAAAAAAEAAADl/wgAAAAAAAEAAADl/wkAAAACAAEAAADm/wgAAAAAAAEAAADm/wkAAAAAAAEAAADn/wgAAAAAAAEAAADn/wkAAAAAAAEAAADo/wgAAAACAAEAAADo/wkAAAACAAEAAADp/wgAAAACAAEAAADp/wkAAAACAAEAAADq/wgAAAAAAAEAAADq/wkAAAACAAEAAADr/wgAAAAAAAEAAADr/wkAAAAAAAEAAADs/wgAAAAAAAEAAADs/wkAAAAAAAEAAADt/wgAAAACAAEAAADt/wkAAAACAAEAAADu/wgAAAAAAAEAAADu/wkAAAACAAEAAADv/wgAAAAAAAEAAADv/wkAAAAAAAEAAADw/wgAAAACAAEAAADw/wkAAAAAAAEAAADx/wgAAAACAAEAAADx/wkAAAACAAEAAADy/wgAAAAAAAEAAADy/wkAAAAAAAEAAADz/wgAAAAAAAEAAADz/wkAAAAAAAEAAAD0/wgAAAACAAEAAAD0/wkAAAACAAEAAAD1/wgAAAACAAEAAAD1/wkAAAAAAAEAAAD2/wgAAAAAAAEAAAD2/wkAAAACAAEAAADl/wUAAAACAAEAAADl/wYAAAAAAAEAAADl/wcAAAACAAEAAADm/wUAAAACAAEAAADm/wYAAAACAAEAAADm/wcAAAAAAAEAAADn/wUAAAACAAEAAADn/wYAAAACAAEAAADn/wcAAAAAAAEAAADo/wUAAAACAAEAAADo/wYAAAACAAEAAADo/wcAAAACAAEAAADp/wUAAAACAAEAAADp/wYAAAACAAEAAADp/wcAAAAAAAEAAADq/wUAAAAAAAEAAADq/wYAAAAAAAEAAADr/wUAAAAAAAEAAADr/wYAAAACAAEAAADs/wUAAAACAAEAAADs/wYAAAAAAAEAAADt/wUAAAACAAEAAADt/wYAAAACAAEAAADu/wUAAAACAAEAAADu/wYAAAAAAAEAAADv/wUAAAAAAAEAAADv/wYAAAAAAAEAAADp/wIAAAABAAEAAADp/wMAAAACAAEAAADp/wQAAAACAAEAAADq/wIAAAABAAEAAADq/wMAAAACAAEAAADq/wQAAAACAAEAAADh/woAAAACAAEAAADh/wsAAAACAAEAAADi/woAAAAAAAEAAADi/wsAAAAAAAEAAADj/woAAAAAAAEAAADj/wsAAAAAAAEAAADk/woAAAAAAAEAAADk/wsAAAACAAEAAADl/woAAAAAAAEAAADl/wsAAAACAAEAAADm/woAAAACAAEAAADm/wsAAAAAAAEAAADn/woAAAAAAAEAAADn/wsAAAAAAAEAAADo/woAAAAAAAEAAADo/wsAAAACAAEAAADp/woAAAAAAAEAAADp/wsAAAAAAAEAAADq/woAAAAAAAEAAADq/wsAAAACAAEAAADr/woAAAACAAEAAADr/wsAAAAAAAEAAADs/woAAAAAAAEAAADs/wsAAAACAAEAAADt/woAAAAAAAEAAADt/wsAAAAAAAEAAADu/woAAAACAAEAAADu/wsAAAAAAAEAAADv/woAAAAAAAEAAADv/wsAAAAAAAEAAADw/woAAAAAAAEAAADw/wsAAAAAAAEAAADx/woAAAACAAEAAADx/wsAAAAAAAEAAADy/woAAAACAAEAAADy/wsAAAAAAAEAAADz/woAAAAAAAEAAADz/wsAAAAAAAEAAAD0/woAAAACAAEAAAD0/wsAAAAAAAEAAAD1/woAAAAAAAEAAAD1/wsAAAAAAAEAAAD2/woAAAACAAEAAAD2/wsAAAACAAEAAADi/wwAAAACAAEAAADi/w0AAAAAAAEAAADi/w4AAAAAAAEAAADj/wwAAAAAAAEAAADj/w0AAAACAAEAAADj/w4AAAACAAEAAADk/wwAAAAAAAEAAADk/w0AAAACAAEAAADk/w4AAAAAAAEAAADl/wwAAAACAAEAAADl/w0AAAACAAEAAADl/w4AAAACAAEAAADm/wwAAAAAAAEAAADm/w0AAAACAAEAAADm/w4AAAAAAAEAAADn/wwAAAAAAAEAAADn/w0AAAAAAAEAAADn/w4AAAACAAEAAADo/wwAAAAAAAEAAADo/w0AAAAAAAEAAADo/w4AAAAAAAEAAADp/wwAAAACAAEAAADp/w0AAAACAAEAAADp/w4AAAACAAEAAADq/wwAAAAAAAEAAADq/w0AAAAAAAEAAADq/w4AAAAAAAEAAADr/wwAAAACAAEAAADr/w0AAAAAAAEAAADr/w4AAAACAAEAAADs/wwAAAAAAAEAAADs/w0AAAAAAAEAAADs/w4AAAAAAAEAAADt/wwAAAAAAAEAAADt/w0AAAACAAEAAADt/w4AAAACAAEAAADu/wwAAAACAAEAAADu/w0AAAACAAEAAADu/w4AAAACAAEAAADv/wwAAAAAAAEAAADv/w0AAAACAAEAAADv/w4AAAACAAEAAADw/wwAAAAAAAEAAADw/w0AAAACAAEAAADw/w4AAAACAAEAAADx/wwAAAAAAAEAAADx/w0AAAACAAEAAADx/w4AAAAAAAEAAADy/wwAAAACAAEAAADy/w0AAAAAAAEAAADy/w4AAAACAAEAAADz/wwAAAAAAAEAAADz/w0AAAAAAAEAAADz/w4AAAACAAEAAAD0/wwAAAAAAAEAAAD0/w0AAAACAAEAAAD0/w4AAAACAAEAAAD1/wwAAAACAAEAAAD1/w0AAAACAAEAAAD1/w4AAAAAAAEAAAD2/wwAAAACAAEAAAD2/w0AAAAAAAEAAAD2/w4AAAAAAAEAAADf/w8AAAAAAAEAAADf/xAAAAAAAAEAAADg/w8AAAACAAEAAADg/xAAAAAAAAEAAADh/w8AAAACAAEAAADh/xAAAAAAAAEAAADi/w8AAAACAAEAAADi/xAAAAACAAEAAADj/w8AAAAAAAEAAADj/xAAAAACAAEAAADk/w8AAAAAAAEAAADk/xAAAAACAAEAAADl/w8AAAAAAAEAAADl/xAAAAAAAAEAAADm/w8AAAACAAEAAADm/xAAAAACAAEAAADn/w8AAAACAAEAAADn/xAAAAACAAEAAADo/w8AAAACAAEAAADo/xAAAAAAAAEAAADp/w8AAAACAAEAAADp/xAAAAACAAEAAADq/w8AAAAAAAEAAADq/xAAAAAAAAEAAADr/w8AAAAAAAEAAADr/xAAAAAAAAEAAADs/w8AAAACAAEAAADs/xAAAAAAAAEAAADt/w8AAAACAAEAAADt/xAAAAACAAEAAADu/w8AAAAAAAEAAADu/xAAAAAAAAEAAADv/w8AAAACAAEAAADv/xAAAAACAAEAAADw/w8AAAAAAAEAAADw/xAAAAACAAEAAADx/w8AAAACAAEAAADx/xAAAAAAAAEAAADy/w8AAAAAAAEAAADy/xAAAAACAAEAAADz/w8AAAAAAAEAAADz/xAAAAACAAEAAAD0/w8AAAAAAAEAAAD0/xAAAAAAAAEAAAD1/w8AAAACAAEAAAD1/xAAAAACAAEAAAD2/w8AAAAAAAEAAAD2/xAAAAACAAEAAAD3/w8AAAACAAEAAAD3/xAAAAAAAAEAAAD4/w8AAAAAAAEAAAD4/xAAAAACAAEAAAD5/w8AAAAAAAEAAAD5/xAAAAACAAEAAADe/wUAAAAAAAEAAADe/wYAAAACAAEAAADf/wUAAAACAAEAAADf/wYAAAAAAAEAAADg/wUAAAACAAEAAADh/wUAAAACAAEAAADi/wUAAAAAAAEAAADj/wUAAAACAAEAAADi/wYAAAACAAEAAADj/wYAAAACAAEAAADj/wcAAAAAAAEAAADe/wcAAAACAAEAAADc/wcAAAAAAAEAAADU/wQAAAAAAAEAAADV/wQAAAAAAAEAAADW/wQAAAACAAEAAADX/wQAAAAAAAEAAADY/wQAAAAAAAEAAADZ/wQAAAAAAAEAAADY/wUAAAAAAAEAAADY/wYAAAACAAEAAADZ/wUAAAAAAAEAAADZ/wYAAAACAAEAAADT//z/AAAAAAEAAADT//3/AAAAAAEAAADT//7/AAACAAEAAADT////AAACAAEAAADT/wAAAAACAAEAAADT/wEAAAAAAAEAAADT/wIAAAAAAAEAAADR//z/AAAAAAEAAADR//3/AAAAAAEAAADR//7/AAACAAEAAADS//z/AAACAAEAAADS//3/AAACAAEAAADS//7/AAACAAEAAADN//z/AAACAAEAAADN//3/AAACAAEAAADO//z/AAACAAEAAADO//3/AAAAAAEAAADP//z/AAACAAEAAADP//3/AAAAAAEAAADQ//z/AAACAAEAAADQ//3/AAACAAEAAADN//r/AAACAAEAAADN//v/AAAAAAEAAADO//r/AAACAAEAAADO//v/AAAAAAEAAADP//r/AAACAAEAAADP//v/AAACAAEAAADQ//r/AAACAAEAAADQ//v/AAAAAAEAAADR//r/AAACAAEAAADR//v/AAAAAAEAAADS//r/AAACAAEAAADS//v/AAACAAEAAADT//r/AAACAAEAAADT//v/AAAAAAEAAADU//r/AAAAAAEAAADU//v/AAAAAAEAAADV//r/AAAAAAEAAADV//v/AAACAAEAAADW//r/AAAAAAEAAADW//v/AAAAAAEAAADX//r/AAACAAEAAADX//v/AAAAAAEAAADY//r/AAAAAAEAAADY//v/AAAAAAEAAADZ//r/AAAAAAEAAADZ//v/AAACAAEAAADa//r/AAACAAEAAADa//v/AAACAAEAAADb//r/AAACAAEAAADb//v/AAACAAEAAADc//r/AAAAAAEAAADc//v/AAACAAEAAADd//r/AAACAAEAAADd//v/AAAAAAEAAADe//r/AAAAAAEAAADe//v/AAACAAEAAADf//r/AAACAAEAAADf//v/AAAAAAEAAADa//z/AAACAAEAAADa//3/AAACAAEAAADa//7/AAACAAEAAADa////AAACAAEAAADb//z/AAACAAEAAADb//3/AAAAAAEAAADb//7/AAAAAAEAAADb////AAAAAAEAAADc//z/AAAAAAEAAADc//3/AAAAAAEAAADc//7/AAACAAEAAADc////AAAAAAEAAADd//z/AAAAAAEAAADd//3/AAAAAAEAAADd//7/AAACAAEAAADd////AAAAAAEAAADe//z/AAACAAEAAADe//3/AAACAAEAAADe//7/AAAAAAEAAADe////AAAAAAEAAADf//z/AAACAAEAAADf//3/AAACAAEAAADf//7/AAAAAAEAAADf////AAAAAAEAAADg//z/AAAAAAEAAADg//3/AAAAAAEAAADg//7/AAACAAEAAADg////AAACAAEAAADh//z/AAACAAEAAADh//3/AAACAAEAAADh//7/AAAAAAEAAADh////AAAAAAEAAADi//z/AAAAAAEAAADi//3/AAAAAAEAAADi//7/AAAAAAEAAADi////AAACAAEAAADj//z/AAAAAAEAAADj//3/AAACAAEAAADj//7/AAACAAEAAADj////AAAAAAEAAADk//z/AAACAAEAAADk//3/AAAAAAEAAADk//7/AAACAAEAAADk////AAAAAAEAAADl//z/AAACAAEAAADl//3/AAACAAEAAADl//7/AAACAAEAAADl////AAACAAEAAADm//z/AAACAAEAAADm//3/AAAAAAEAAADm//7/AAACAAEAAADm////AAACAAEAAADn//z/AAAAAAEAAADn//3/AAACAAEAAADn//7/AAAAAAEAAADn////AAACAAEAAADo//z/AAACAAEAAADo//3/AAAAAAEAAADo//7/AAACAAEAAADo////AAAAAAEAAADp//z/AAAAAAEAAADp//3/AAACAAEAAADp//7/AAACAAEAAADp////AAACAAEAAADq//z/AAAAAAEAAADq//3/AAACAAEAAADq//7/AAACAAEAAADq////AAAAAAEAAADr//z/AAAAAAEAAADr//3/AAAAAAEAAADr//7/AAAAAAEAAADr////AAACAAEAAADs//z/AAACAAEAAADs//3/AAAAAAEAAADs//7/AAAAAAEAAADs////AAAAAAEAAADt//z/AAACAAEAAADt//3/AAACAAEAAADt//7/AAACAAEAAADt////AAACAAEAAADu//z/AAACAAEAAADu//3/AAAAAAEAAADu//7/AAACAAEAAADu////AAACAAEAAADv//z/AAAAAAEAAADv//3/AAACAAEAAADv//7/AAACAAEAAADv////AAACAAEAAADw//z/AAACAAEAAADw//3/AAAAAAEAAADw//7/AAACAAEAAADw////AAACAAEAAADx//z/AAAAAAEAAADx//3/AAACAAEAAADx//7/AAACAAEAAADx////AAAAAAEAAADy//z/AAACAAEAAADy//3/AAAAAAEAAADy//7/AAAAAAEAAADy////AAAAAAEAAADz//z/AAACAAEAAADz//3/AAACAAEAAADz//7/AAACAAEAAADz////AAAAAAEAAAD0//z/AAAAAAEAAAD0//3/AAACAAEAAAD0//7/AAACAAEAAAD0////AAAAAAEAAAD1//z/AAACAAEAAAD1//3/AAAAAAEAAAD1//7/AAAAAAEAAAD1////AAAAAAEAAAD2//z/AAACAAEAAAD2//3/AAAAAAEAAAD2//7/AAAAAAEAAAD2////AAACAAEAAAD3//z/AAACAAEAAAD3//3/AAAAAAEAAAD3//7/AAACAAEAAAD3////AAACAAEAAAD4//z/AAAAAAEAAAD4//3/AAACAAEAAAD4//7/AAAAAAEAAAD4////AAACAAEAAAD5//z/AAACAAEAAAD5//3/AAAAAAEAAAD5//7/AAAAAAEAAAD5////AAABAAAAAAD6//z/AAACAAAAAAD6//3/AAACAAAAAAD6//7/AAACAAAAAAD6////AAAAAAAAAAD7//z/AAAAAAEAAAD7//3/AAAAAAEAAAD7//7/AAAAAAEAAAD7////AAABAAAAAAD8//z/AAACAAEAAAD8//3/AAAAAAEAAAD8//7/AAAAAAEAAAD8////AAABAAAAAAD9//z/AAACAAEAAAD9//3/AAACAAEAAAD9//7/AAAAAAEAAAD9////AAABAAAAAAD+//z/AAAAAAEAAAD+//3/AAACAAEAAAD+//7/AAACAAEAAAD+////AAABAAAAAAD///z/AAACAAEAAAD///3/AAAAAAEAAAD///7/AAACAAEAAAD/////AAABAAAAAAAAAPz/AAACAAAAAAAAAP3/AAACAAAAAAAAAP7/AAACAAAAAAAAAP//AAAAAAAAAADg//r/AAAAAAEAAADg//v/AAAAAAEAAADh//r/AAAAAAEAAADh//v/AAACAAEAAADi//r/AAACAAEAAADi//v/AAAAAAEAAADj//r/AAAAAAEAAADj//v/AAACAAEAAADk//r/AAACAAEAAADk//v/AAAAAAEAAADl//r/AAAAAAEAAADl//v/AAACAAEAAADm//r/AAACAAEAAADm//v/AAACAAEAAADn//r/AAACAAEAAADn//v/AAACAAEAAADo//r/AAAAAAEAAADo//v/AAAAAAEAAADp//r/AAAAAAEAAADp//v/AAAAAAEAAADq//r/AAAAAAEAAADq//v/AAACAAEAAADr//r/AAACAAEAAADr//v/AAACAAEAAADs//r/AAACAAEAAADs//v/AAAAAAEAAADt//r/AAAAAAEAAADt//v/AAACAAEAAADu//r/AAACAAEAAADu//v/AAAAAAEAAADv//r/AAACAAEAAADv//v/AAAAAAEAAADw//r/AAACAAEAAADw//v/AAACAAEAAADx//r/AAAAAAEAAADx//v/AAACAAEAAADy//r/AAACAAEAAADy//v/AAACAAEAAADz//r/AAAAAAEAAADz//v/AAAAAAEAAAD0//r/AAAAAAEAAAD0//v/AAAAAAEAAAD1//r/AAAAAAEAAAD1//v/AAACAAEAAAD2//r/AAACAAEAAAD2//v/AAACAAEAAAD3//r/AAACAAEAAAD3//v/AAACAAEAAAD4//r/AAAAAAEAAAD4//v/AAAAAAEAAAD5//r/AAACAAEAAAD5//v/AAACAAEAAAD6//r/AAACAAAAAAD6//v/AAACAAAAAAD7//r/AAAAAAEAAAD7//v/AAAAAAEAAAD8//r/AAACAAEAAAD8//v/AAAAAAEAAAD9//r/AAAAAAEAAAD9//v/AAACAAEAAAD+//r/AAAAAAEAAAD+//v/AAACAAEAAAD///r/AAACAAEAAAD///v/AAACAAEAAAAAAPr/AAAAAAAAAAAAAPv/AAACAAAAAAD1/wUAAAADAAQAAAD2/wUAAAADAAQAAAD5/wQAAAADAAQAAAD6/wQAAAADAAQAAAD9/wMAAAADAAQAAAD+/wMAAAADAAQAAADW////AAACAAQAAADX////AAACAAQAAADU/wEAAAAAAAQAAADk/wcAAAABAAQAAADf/wAAAAACAAQAAADg/wAAAAACAAQAAADh/wAAAAACAAQAAADi/wAAAAACAAQAAADj/wAAAAACAAQAAADx/wAAAAACAAQAAADy/wAAAAACAAQAAADz/wAAAAACAAQAAAD0/wAAAAACAAQAAAD1/wAAAAACAAQAAAD2/wAAAAACAAQAAAD3/wAAAAACAAQAAAD4/wAAAAACAAQAAAD5/wAAAAACAAQAAADU//z/AAACAAQAAADV//z/AAACAAQAAADW//z/AAACAAQAAAABAAMAAAAAAAEAAAACAAMAAAAAAAEAAAADAAMAAAAAAAEAAAAEAAMAAAAAAAEAAADa/wQAAAAAAAQAAADc/wYAAAABAAIAAAA=")

[node name="grass_map" parent="." instance=ExtResource("10_t4idi")]
tile_map_data = PackedByteArray("AADe/wkAAAADAAEAAADd/wkAAAAFAAEAAADc/wkAAAAEAAEAAADb/wkAAAADAAEAAADa/wwAAAAEAAEAAADZ/wwAAAAFAAEAAADY/wwAAAADAAEAAADX/wwAAAADAAEAAADW/wwAAAAEAAEAAADV/wwAAAAFAAEAAADT/wwAAAAFAAEAAADS/wwAAAAFAAEAAADR/wwAAAAFAAEAAADQ/wwAAAAEAAEAAADP/wwAAAAFAAEAAADO/wwAAAAFAAEAAADN/wwAAAAFAAEAAADM/wwAAAADAAEAAADJ/wwAAAAEAAEAAADI/wwAAAAFAAEAAADB/wcAAAAFAAEAAADA/wcAAAADAAEAAAC//wcAAAAFAAEAAAC+/wcAAAAFAAEAAAC9/wcAAAAEAAEAAAC8/wcAAAAEAAEAAAC6/wcAAAAFAAEAAADH/wwAAAAFAAEAAADG/wwAAAAEAAEAAADa/wsAAAAGAAEAAADa/woAAAAGAAAAAADa/wkAAAAGAAEAAADa/wgAAAAGAAEAAADQ/wsAAAAGAAAAAADQ/woAAAAGAAIAAADQ/wkAAAAGAAIAAADQ/wgAAAAGAAEAAADQ/wcAAAAGAAEAAADM/wYAAAAGAAAAAADM/wUAAAAGAAAAAADM/wQAAAAGAAIAAADM/wMAAAAGAAAAAADM/wIAAAAGAAAAAADM/wEAAAAGAAAAAADM/wAAAAAGAAEAAADM////AAAGAAIAAADM//7/AAAGAAEAAADM//3/AAAGAAIAAADD/wwAAAAGAAIAAADD/wsAAAAGAAEAAADD/wkAAAAGAAIAAAC4/xAAAAAGAAAAAAC4/w8AAAAGAAIAAAC4/w4AAAAGAAEAAAC4/w0AAAAGAAIAAAC4/wwAAAAGAAAAAAC4/wsAAAAGAAAAAAC4/woAAAAGAAIAAAC4/wYAAAAGAAIAAAC4/wgAAAAGAAIAAAC4/wUAAAAGAAIAAAC5/wUAAAAEAAAAAAC7/wUAAAADAAAAAAC9/wUAAAAFAAAAAAC//wUAAAAEAAAAAADA/wUAAAAFAAAAAADC/wUAAAAEAAAAAADD/wUAAAAFAAAAAADE/wUAAAAEAAAAAADF/wUAAAAEAAAAAADH/wUAAAADAAAAAADG/wUAAAAEAAAAAADQ/wYAAAAHAAIAAADN/wYAAAADAAEAAADO/wYAAAAEAAEAAADP/wYAAAAFAAEAAAA=")

[node name="grass_map_h" parent="." instance=ExtResource("10_t4idi")]
tile_map_data = PackedByteArray("AADQ/wsAAAAHAAEAAADQ/woAAAAHAAIAAADQ/wkAAAAHAAIAAADQ/wgAAAAHAAEAAADQ/wcAAAAHAAIAAADQ/wYAAAAEAAAAAADM/wUAAAAHAAEAAADM/wQAAAAHAAAAAADM/wMAAAAHAAAAAADM/wIAAAAHAAAAAADM/wEAAAAHAAEAAADM/wAAAAAHAAIAAADN/wYAAAADAAAAAADP/wYAAAAEAAAAAADO/wYAAAAFAAAAAADM/wYAAAADAAEAAADH/woAAAAHAAAAAADH/wkAAAAHAAEAAADH/wgAAAAHAAIAAADH/wcAAAAHAAEAAADH/wYAAAAHAAEAAADH/wUAAAAHAAIAAAC+/wUAAAAEAAAAAAC7/wUAAAADAAAAAAC8/wUAAAAEAAAAAAC5/wkAAAAHAAAAAAC5/woAAAAHAAEAAAC5/wsAAAAHAAAAAAC5/wgAAAAHAAIAAAC5/wwAAAAHAAAAAAC5/w0AAAAHAAAAAAC5/w8AAAAHAAIAAAC5/xAAAAAHAAIAAAA=")

[node name="spawn_setter" parent="." instance=ExtResource("11_sn7rp")]
position = Vector2(-528, 56)

[node name="spike_spawn_setter" parent="." instance=ExtResource("12_qeahx")]
position = Vector2(-208, 32)

[node name="campire" parent="." instance=ExtResource("13_ebltx")]
position = Vector2(-527, 61)

[node name="jump_boots_area" type="Area2D" parent="."]
position = Vector2(1, 0)
collision_layer = 0
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="jump_boots_area"]
position = Vector2(-469, 76)
texture = ExtResource("14_eqd6e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="jump_boots_area"]
position = Vector2(-468.875, 79)
shape = SubResource("RectangleShape2D_yietf")

[node name="CPUParticles2D" type="CPUParticles2D" parent="jump_boots_area"]
position = Vector2(-469, 78)
amount = 10
emission_shape = 1
emission_sphere_radius = 5.93
gravity = Vector2(0, -9)
color = Color(0.6, 0.239216, 0.254902, 1)

[node name="Label" type="Label" parent="."]
offset_left = -477.0
offset_top = 47.0
offset_right = -437.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("15_3sa33")
theme_override_font_sizes/font_size = 11
text = "[space]
[space]"

[connection signal="child_exiting_tree" from="coin_nodes" to="." method="_on_coin_nodes_child_exiting_tree"]
[connection signal="body_entered" from="jump_boots_area" to="." method="_on_jump_boots_area_body_entered"]
